Fix small screen overflow

--- a/src/styles/chapter.css
+++ b/src/styles/chapter.css
@@ -137,7 +137,7 @@ h1 {
 	}
 
 	html, body, main {
-		overflow: unset;
+		overflow: auto;
 	}
 }
 
